# nucleo

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  IDENTITY.md  LICENSE  README.md  config.json
.cargo-husky/hooks/: pre-commit  pre-push
.claude/agents/: command-builder.md  nucleo-expert.md  plugin-builder.md
.claude/skills/: add-command.md  benchmark.md
.claude/skills/add-mcp-tool/: SKILL.md
.claude/skills/add-plugin/: SKILL.md
.claude/skills/create-cli/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.github/workflows/: ci.yml  release.yml
benchmarks/: run.sh
docs/: README.md
docs/guides/: create-a-new-cli.md
plugins/hello/: package.json  plugin.json
plugins/hello/src/: index.ts
plugins/scaffold/: package.json  plugin.json
plugins/scaffold/src/: index.js
src/: client.rs  config.rs  consts.rs  error.rs  formatter.rs  main.rs  oauth2.rs
src/commands/: auth.rs  config_cmd.rs  echo.rs  mcp_cmd.rs  mod.rs  ping.rs  plugins.rs  setup.rs  status.rs
src/mcp/: executor.rs  mod.rs  tools.rs
src/types/: auth.rs  common.rs  mod.rs  oauth2.rs  project.rs
templates/hello-api/: .env.example  package.json
templates/hello-api/src/: client.js  index.js
