[package]
name = "nucleo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A reusable CLI framework — the nucleus of your next CLI"
license = "MIT"
repository = "https://github.com/mateonunez/nucleo"
readme = "README.md"
authors = ["Mateo Nunez", "Claude"]
keywords = ["cli", "framework", "template", "plugins"]
categories = ["command-line-utilities"]

[[bin]]
name = "nucleo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "string"] }
clap_complete = "4.6.0"
dirs = "6.0.0"
rand = "0.9"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls-native-roots", "multipart"], default-features = false }
rmcp = { version = "1.3", features = ["server"] }
rpassword = "7.4.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }

[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
tempfile = "3.27.0"
